--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(Assignment2)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(Assignment2 main.cpp)
+add_executable(Assignment2 main.cpp
+        cmake-build-debug/Board.cpp
+        cmake-build-debug/Board.h)
